feat(web): curriculum page
